# rust-kubernetes-3-tier-app

./: .dockerignore  .gitignore  Cargo.toml  README.md  app.yaml  db.yaml  docker-compose.yml  dockerfile  kafka.yaml  service.yaml  zookeeper.yaml
migrations/2023-11-17-122100_create_counter_table/: down.sql  up.sql
src/: main.rs  schema.rs
src/models/: mod.rs
src/services/: mod.rs
src/static/: index.html
