[package]
name = "three-tier-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "three-tier-app"
path = "src/main.rs"

[dependencies]
    diesel = { version = "2.1.0", features = ["postgres"] } 
    rocket = { version = "0.5.0-rc.1", features = ["json"] }
    dotenv = "0.15"
    serde = "1.0.152"
    rdkafka = { version = "0.26", features = ["cmake-build"] }
    tokio = { version = "1", features = ["full"] }
    futures = "0.3"